# chat-rs

./: Cargo.toml  test.rest
chat_server/: Cargo.toml
chat_server/src/: config.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  mod.rs
notify_server/: Cargo.toml  index.html
notify_server/src/: config.rs  lib.rs  main.rs  sse.rs
src/: config.rs  main.rs
src/handlers/: messages.rs
