[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["http2", "query", "tracing", "multipart"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "2.0.11"
tokio = {version ="1.43.0",features = ["rt","rt-multi-thread","macros"]}
tracing = "0.1"
tracing-subscriber = "0.3.0"
